--- a/Game_Avoider/Packages/manifest.json
+++ b/Game_Avoider/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ads": "3.7.5",
     "com.unity.collab-proxy": "1.7.1",
     "com.unity.device-simulator": "3.0.1-preview",
     "com.unity.ide.rider": "2.0.7",
